Added Assignment Files

--- a/Aaron McCormick Assignment 6/Aaron McCormick Assignment 6.vcxproj
+++ b/Aaron McCormick Assignment 6/Aaron McCormick Assignment 6.vcxproj
@@ -151,9 +151,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\..\..\..\..\tips.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\..\..\..\maya_tolappa_assignment6_tester.cpp" />
+    <ClCompile Include="..\..\..\..\..\..\tips.cpp" />
     <ClCompile Include="Aaron McCormick Assignment 6.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
