--- a/Aaron McCormick Assignment 6/Aaron McCormick Assignment 6.vcxproj.filters
+++ b/Aaron McCormick Assignment 6/Aaron McCormick Assignment 6.vcxproj.filters
@@ -18,12 +18,21 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\..\..\tips.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Aaron McCormick Assignment 6.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\maya_tolappa_assignment6_tester.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\..\..\tips.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
