--- a/Aaron McCormick Assignment 6/Aaron McCormick Assignment 6.vcxproj
+++ b/Aaron McCormick Assignment 6/Aaron McCormick Assignment 6.vcxproj
@@ -151,19 +151,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\..\..\tips.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="tips.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\..\maya_tolappa_assignment6_tester.cpp" />
-    <ClCompile Include="..\..\..\..\..\..\tips.cpp" />
     <ClCompile Include="Aaron McCormick Assignment 6.cpp" />
+    <ClCompile Include="maya_tolappa_assignment6_tester.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="tips.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
