--- a/Aaron McCormick Assignment 6/Aaron McCormick Assignment 6.vcxproj.filters
+++ b/Aaron McCormick Assignment 6/Aaron McCormick Assignment 6.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\..\..\tips.h">
+    <ClInclude Include="tips.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -29,10 +29,10 @@
     <ClCompile Include="Aaron McCormick Assignment 6.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\..\maya_tolappa_assignment6_tester.cpp">
+    <ClCompile Include="maya_tolappa_assignment6_tester.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\..\..\tips.cpp">
+    <ClCompile Include="tips.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
