--- a/Aaron McCormick Assignment 6/Aaron McCormick Assignment 6.vcxproj.filters
+++ b/Aaron McCormick Assignment 6/Aaron McCormick Assignment 6.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClInclude Include="pch.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="tips.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Aaron McCormick Assignment 6.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Tips.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
